--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,7 @@
     letter-spacing: 3.5px;
     font-size: 0.6em;
     font-weight: 700;
-    margin-top: 35px;
+    margin-bottom: 20px;
 }
 
 #advices > p {
